Fix navbar on mobile, theme tweaks

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,7 +6,6 @@
 
 * {
 	font-family: "Fira Sans";
-	text-align: justify;
 	scroll-behavior: smooth;
 }
 
